update of jdk to version 11
- new module-info.java file with definition of required modules and packages to export
- update of gradle to new version 7.5-rc-2
- update of lombok version to 1.18.24
- update of gradle-plugin dependency 'org.ajoberstar.grgit:grgit-gradle' in version 5.0.0
- update of test-dependency silly-collections version to 18.2
- update of test-dependency test-objects to new minor version 6.1
- update of test-dependency equalsverifier version to 3.10
- update of test-dependency testng version to 7.6.0